[FIX] crm: form field alignment
In the Lead form view, properly align "Planned Revenue" and "Probability" fields
side-by-side and adjust their styling in mobile.

Related to task 1891955

--- a/addons/crm/static/src/css/crm.css
+++ b/addons/crm/static/src/css/crm.css
@@ -2,3 +2,14 @@
 .openerp .oe_margin_top_8 {
 	margin-top: 8px;
 }
+
+/* Do not forward port after saas-11.4 */
+.o_opportunity_form .oe_title > .o_row {
+	display: flex;
+}
+.o_opportunity_form .oe_title > .o_row > .col {
+	margin-right: 0.5em;
+}
+.o_opportunity_form .oe_title > .o_row > .col:last-child {
+	margin-right: 0;
+}
